--- a/src/App.scss
+++ b/src/App.scss
@@ -214,13 +214,14 @@ $gobudy-orange: #DB9600;
    margin-top: 0;
    border-radius: 0;
    background-color: transparent;
-   padding-top: 0;
+   padding-top: 2vh;
    padding-bottom: 0;
    height: 4vh;
    margin: 0;
 }
 
 .ui.inverted.pointing.secondary.menu {
+   // background: #006983 !important;
    height: 100%;
    border: none;
    display: flex;
@@ -253,6 +254,14 @@ $gobudy-orange: #DB9600;
 
 .circular.inverted.icon.colorRounderIcons {
    background: $gobuddy-blue;
+}
+
+.carousel-container {
+   height: 50vh;
+   z-index: -20;
+   // background: white;
+   -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+   clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 }
 
 .footer {
