--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 .App {
   text-align: center;
   background-image: url("assets/background.png");
-  background-size: cover; }
+  background-size: cover;
+ }
 
 .reasons-container {
   background-color: #006983;
@@ -158,7 +159,7 @@
   margin-top: 0;
   border-radius: 0;
   background-color: transparent;
-  padding-top: 0;
+  padding-top: 2vh;
   padding-bottom: 0;
   height: 4vh;
   margin: 0; }
@@ -188,6 +189,12 @@
 
 .circular.inverted.icon.colorRounderIcons {
   background: #006983; }
+
+.carousel-container {
+  height: 50vh;
+  z-index: -20;
+  -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+  clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%); }
 
 .footer {
   height: auto;
