--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
 .App {
   text-align: center;
   background-image: url("assets/background.png");
-  background-size: cover;
- }
+  background-size: cover; }
 
 .reasons-container {
   background-color: #006983;
