--- a/src/App.scss
+++ b/src/App.scss
@@ -320,4 +320,82 @@ $gobudy-orange: #DB9600;
       margin-left: 0px !important;
       margin-right: 0px !important;
    }
+   .ui.inverted.pointing.secondary.menu {
+      flex-direction: column;
+   }
+   .ui.inverted.segment.menu-top {
+      height: auto;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 2em;
+      z-index: 10;
+      background-color: rgba(105, 104, 104, 0.5);
+      box-shadow: 0px 5px 50px black;
+   }
+   .ui.secondary.pointing.menu .item {
+      align-self: center;
+   }
+   .ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
+       margin-left: 0px !important;
+   }
+
+   .ui.tabular.menu+.attached:not(.top).segment, .ui.tabular.menu+.attached:not(.top).segment+.attached:not(.top).segment {
+      width: 100vw;
+   }
+
+   .testtt {
+
+      .mega-search-container {
+         padding-bottom: 5vh;
+         .div {
+            display: flex;
+            justify-content: center;
+            width: 100vw;
+         }
+         .ui.bottom.attached.segment.tab {
+
+         }
+         .link-club-known {
+         }  
+         .input-group-orange {
+            }
+            .search-container {
+
+            .search-bar {
+
+               #custom-search-input{
+                  width: auto;
+                  .input-group {
+
+                     span {
+
+                        .icon {
+
+                        }
+                     }
+                  }
+   
+                  input{
+
+                  }
+                  .input-group-btn {
+
+                     button {
+
+                        img {
+
+                                              }
+                     }
+                  }
+                  .input-group-btn.orange-go {
+                     button {
+
+                     }
+                  }
+               }
+            }
+         }
+      }
+   }
+
 }
